src/objects/uw_BET__c.object
<CustomObject>
    <customHelpPage>be_help_pop_up</customHelpPage>
    <description>Custom object for Brand Experience Toolkit</description>
    <fields>
        <fullName>Background_Colour__c</fullName>
        <inlineHelpText>Help text</inlineHelpText>
        <label>Background colour</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banner_1_Location__c</fullName>
        <inlineHelpText>The Banner appears at the top of every BET. The default image will be used if no file is uploaded here.</inlineHelpText>
        <label>Banner 1 Location</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banner_2_Location__c</fullName>
        <label>Banner 2 Location</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banner_Colour__c</fullName>
        <label>Banner colour</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Border_Colour__c</fullName>
        <label>Border colour</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Keyword_Search__c</fullName>
        <label>Brand Keyword Search</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Position_Keyword_Search__c</fullName>
        <label>Brand Position Keyword Search</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Positioning</label>
        <referenceTo>MDO_BrandPosition__c</referenceTo>
        <relationshipLabel>Brand Experience List</relationshipLabel>
        <relationshipName>Brand_Experience_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; +  uw_Brand__r.Id , uw_Brand__r.Name  , &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Group_Keyword_Search__c</fullName>
        <label>Category Group Keyword Search</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category Group</label>
        <referenceTo>MDO_Category__c</referenceTo>
        <relationshipLabel>Brand Experience List</relationshipLabel>
        <relationshipName>Brand_Experience_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category_Keyword_Search__c</fullName>
        <label>Category Keyword Search</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Level_2__c</fullName>
        <inlineHelpText>Based on your selection in Category Level 1, this list will populate with further categories.</inlineHelpText>
        <label>Category</label>
        <picklist>
            <controllingField>Product_Category_Sub_Division__c</controllingField>
            <picklistValues>
                <fullName>Coffee &amp; Snacks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooking Fats &amp; Oils Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deodorants &amp; Fragrances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desserts Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dressings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frozen Foods Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hair Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ice Cream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laundry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Corporate Home Care Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Corporate Personal Care Cat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oral Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Foods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prestige Legacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savoury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skin Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skin Cleansing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spreads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tea and Soy &amp; Fruit Beverages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vitality Shots Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water Purification Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weight Management</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category_Level_3__c</fullName>
        <inlineHelpText>Based on your selection in Category Level 2, this list will populate with further categories.</inlineHelpText>
        <label>Sub category</label>
        <picklist>
            <controllingField>Category_Level_2__c</controllingField>
            <picklistValues>
                <fullName>Colourants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooking Fats &amp; Oils</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooking Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deodorants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desserts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dishwash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fabric Conditioners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fabrics Cleaning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Face</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fragrances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frozen Foods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hand &amp; Body Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household Cleaning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Home Ice Cream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leaf &amp; Instant Tea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mayonnaise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meals &amp; Dishes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mouthwash &amp; Other Oral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Corporate Home Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Corporate Personal Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Dressings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Hair Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Misc Foods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Savoury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Spreads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Home Ice Cream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perms &amp; Relaxers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prestige Fragrance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prestige Skin Care</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BET_Category__c.BET_Parent_Category__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BET_Category__c</referenceTo>
        <relationshipLabel>Brand Experience (BET Division)</relationshipLabel>
        <relationshipName>Brand_Experience1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CollaborationGroupId__c</fullName>
        <label>CollaborationGroupId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collaboration_Group__c</fullName>
        <formula>HYPERLINK( &apos;/_ui/core/chatter/groups/GroupProfilePage?g=&apos;  &amp; CollaborationGroupId__c ,  IMAGE(&apos;/servlet/servlet.FileDownload?file=015E00000016tHu&apos;, &apos;Open&apos;)  , &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goto Studio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Colour__c</fullName>
        <inlineHelpText>Test Text</inlineHelpText>
        <label>Section header colour</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Published__c</fullName>
        <label>Date Published</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deletion_Date__c</fullName>
        <label>Deletion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Add text that will help others search for your brand experience. If the text was copied over from an IPM project, editing this text will not modify the description of the IPM Navigator project, and only affects the description field of your BET.</inlineHelpText>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FinalReleaseDate__c</fullName>
        <label>Final Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Release_Due_Date__c</fullName>
        <label>Final Release Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_release_date__c</fullName>
        <formula>IF( 
MONTH(Launch_Date__c) &lt; 6, 
DATE(YEAR(Launch_Date__c)-1, 12 + MONTH(Launch_Date__c)-6, 1), 
DATE(YEAR(Launch_Date__c), MONTH(Launch_Date__c)-6, 1)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final release date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_release_otif__c</fullName>
        <formula>IF(AND( NOT(ISNULL(FinalReleaseDate__c)), NOT(ISNULL(Final_Release_Due_Date__c))),IF(FinalReleaseDate__c &gt; Final_Release_Due_Date__c, &quot;Late&quot; , &quot;On Time&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final release otif</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstReleaseDate__c</fullName>
        <label>First Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Release_Due_Date__c</fullName>
        <label>First Release Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_release_date__c</fullName>
        <formula>IF(
MONTH(Launch_Date__c) &lt; 7,
DATE(YEAR(Launch_Date__c)-1, 4, 15),
DATE(YEAR(Launch_Date__c)-1, 6, 30)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First release date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_release_otif__c</fullName>
        <formula>IF(AND( NOT(ISNULL(FirstReleaseDate__c)), NOT(ISNULL(First_Release_Due_Date__c))),IF(FirstReleaseDate__c &gt; First_Release_Due_Date__c, &quot;Late&quot; , &quot;On Time&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First release otif</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Colour__c</fullName>
        <inlineHelpText>Test</inlineHelpText>
        <label>Font colour</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IPM_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IPM Project</label>
        <referenceTo>IPM_Project__c</referenceTo>
        <relationshipLabel>Brand Experience List</relationshipLabel>
        <relationshipName>Brand_Experience_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Icon_Location__c</fullName>
        <inlineHelpText>The Icon appears on the Search pages. 
The default image will be used if no file is uploaded here.</inlineHelpText>
        <label>Icon Location</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inherit_Branding__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Inherit banner, background colour, font colour from selected brand.</inlineHelpText>
        <label>Inherit Branding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inoplan_Project_Keyword_Search__c</fullName>
        <description>Field holds related project name. If toolkit is related to Inoplan project it holds Inoplan project&apos;s name if it is related to IPM Project it holds IPM project&apos;s name</description>
        <label>Project Keyword Search</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inoplan_Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Please select the Inoplan project your BET should be linked to for reporting purposes. Where possible use the ORIGINAL project name and not a rollout.</inlineHelpText>
        <label>Inoplan Project</label>
        <referenceTo>uw_Inoplan_Project__c</referenceTo>
        <relationshipLabel>Brand Experience</relationshipLabel>
        <relationshipName>Brand_Experience</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Fabric_Conditioners__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is this a Fabric Conditioner BET ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Launch_Date__c</fullName>
        <description>This should be your IPM Target Launch Date (ie: Ship to Trade date)</description>
        <inlineHelpText>This should be your IPM Target Launch Date (ie: Ship to Trade date)</inlineHelpText>
        <label>Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <formula>Left($Api.Enterprise_Server_URL_190,(find(&apos;/services&apos;,$Api.Enterprise_Server_URL_190))) +  Id</formula>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Cluster__c</fullName>
        <inlineHelpText>Select the geographical level for your Brand Experience</inlineHelpText>
        <label>Market Cluster</label>
        <picklist>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Market_Clusters__c</fullName>
        <inlineHelpText>Please select ALL relevant clusters</inlineHelpText>
        <label>Market Cluster(s)</label>
        <picklist>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAMET &amp;  RUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South East Asia</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Max_of_Order_Of_Display__c</fullName>
        <label>Max of Order Of Display</label>
        <summarizedField>uw_Asset__c.Order_Of_Display__c</summarizedField>
        <summaryFilterItems>
            <field>uw_Asset__c.Studio_Asset_Type__c</field>
            <operation>notEqual</operation>
            <value>Brand Experience Presentation</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>uw_Asset__c.Promoted__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>uw_Asset__c.uw_BET__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_Of_Asset_Items__c</fullName>
        <label>No Of Asset Items</label>
        <summaryFilterItems>
            <field>uw_Asset__c.Studio_Asset_Type__c</field>
            <operation>notEqual</operation>
            <value>Brand Experience Presentation</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>uw_Asset__c.Promoted__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>uw_Asset__c.uw_BET__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Owner_Keyword_Search__c</fullName>
        <label>Owner Keyword Search</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presentation_Id__c</fullName>
        <label>Presentation Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>MDO_Brand__c</referenceTo>
        <relationshipLabel>Brand Experience List</relationshipLabel>
        <relationshipName>Brand_Experience_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Category_Sub_Division__c</fullName>
        <inlineHelpText>Which category this BET will sit under. For example, &apos;Foods&apos; or &apos;Refreshment&apos;.</inlineHelpText>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>Cross Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Care excl Other Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Care excl Skin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refreshment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>MDO_Category__c</referenceTo>
        <relationshipLabel>Brand Experience List (Product Category)</relationshipLabel>
        <relationshipName>Brand_Experience_List1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <formula>Inoplan_Project__r.Project_Id__c</formula>
        <label>Inoplan ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Brand_Experience_Toolkits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region_Keyword_Search__c</fullName>
        <label>Region Keyword Search</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Asia Pac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South America</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <picklist>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Sharing__c</fullName>
        <inlineHelpText>Private BETs will only be accessible to those in the Members list.

Public toolkits will be accessible to all who have access to the Brand Experience Toolkits area in Chatter.</inlineHelpText>
        <label>Visibility</label>
        <picklist>
            <picklistValues>
                <fullName>Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>In Progress - when BET is still being built
Published - Once the BET is complete
Expired - when the BET and its associated assets have expired.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>First release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Releasing assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release to refresh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unreleased</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Studio_Chatter_Group__c</fullName>
        <label>Studio Chatter Group</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Studio__c</fullName>
        <formula>HYPERLINK(&quot;/apex/brandexperiencestudio?id=&quot; +Id + &quot;&amp;sfdc.override=1&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015E0000001I82Y&quot;, &quot;Brand Experience Studio&quot;,50, 50) , &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Studio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StylePalette__c</fullName>
        <label>StylePalette</label>
        <picklist>
            <picklistValues>
                <fullName>toolkit-theme-light</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>toolkit-theme-dark</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BET_Category__c.BET_Parent_Category__c</field>
                <operation>equals</operation>
                <valueField>$Source.Category__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BET_Category__c</referenceTo>
        <relationshipLabel>Brand Experience</relationshipLabel>
        <relationshipName>Brand_Experience</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Actual_Assets__c</fullName>
        <label>Total Actual Assets</label>
        <summarizedField>BET_ExpectedAssets__c.Computed_Actual__c</summarizedField>
        <summaryForeignKey>BET_ExpectedAssets__c.Brand_Experience_Toolkit__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Expected_Assets__c</fullName>
        <label>Total Expected Assets</label>
        <summarizedField>BET_ExpectedAssets__c.Expected__c</summarizedField>
        <summaryForeignKey>BET_ExpectedAssets__c.Brand_Experience_Toolkit__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Members__c</fullName>
        <description>Total Number of BET members.Updated by trigger,when a new member is added/deleted</description>
        <inlineHelpText>Total Number of BET members.Updated by trigger,when a new member is added/deleted</inlineHelpText>
        <label>Total Number of Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_assets__c</fullName>
        <label>Total assets</label>
        <summaryFilterItems>
            <field>uw_Asset__c.Promoted__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>uw_Asset__c.uw_BET__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>uw_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Search and select your Brand, which includes &apos;Cross-Brand&apos; if your BET is cross brand. 
Note: If you cannot find your brand then you can select any brand and uncheck &apos;Inherit branding&apos;.</inlineHelpText>
        <label>Brand</label>
        <referenceTo>uw_Brand__c</referenceTo>
        <relationshipLabel>Brand Experience</relationshipLabel>
        <relationshipName>BETs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Brand Experience</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Inoplan_Project__c</columns>
        <columns>Launch_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Toolkit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brand Experience List</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>VisibilityChangeBackToPrivate</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT(ISNEW()),
      ISCHANGED(Sharing__c),
      ISPICKVAL(Sharing__c,&apos;Private&apos;) 
      )</errorConditionFormula>
        <errorMessage>Bet visibility cannot be set back to Private</errorMessage>
    </validationRules>
</CustomObject>